# advent-of-code-2022

./: Cargo.toml  README.md
src/: answer.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  main.rs  shell.rs  util.rs
