[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
arrayvec = { version = "0.7" }
colored = { version = "2" }
itertools = { version = "0.10" }
once_cell = { version = "1" }
